--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -67,8 +67,8 @@
 
   <div id="table">
     <ul>
-      <li><%= link_to "Home", pages_home_path %></li>
-      <li><%= link_to "About", pages_about_path %></li>
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "About", about_path %></li>
     </ul>
   </div>
 
