--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1> Create a new article! </h1>
+<h1>Edit your article</h1>
 
 <% if @article.errors.any? %>
 <h2>The following errors prevented the article from being created.</h2>
@@ -23,6 +23,4 @@
   </p>
     
 <%end%>
-
 <%= link_to "Back to articles", articles_path %>
-    
