--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,6 +69,7 @@
     <ul>
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Blog", articles_path %></li>
     </ul>
   </div>
 
