--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,65 @@
+$navbar-default-bg: #0077b3;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo {
+    float: left;
+    font-size: 1.7em;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: -1dx;
+    font-weight: bold;
+}
+
+#logo:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.center {
+    text-align: center;
+}
+
+.jumbotron {
+    background-image: asset-url("sky.jpg");
+    background-size: cover;
+    height: 50vh;
+}
+
+.jumbotron h1 {
+    color: white;
+    font-size: 5em;
+    text-align: center;
+    padding-bottom: 20px;
+    letter-spacing: -1px;
+    font-weight: bold;
+    padding-top: 44px;
+}
+
+.btn-xlrg {
+    font-size: 1.7em;
+    background-color: #005580;
+    color: white;
+}
+
+footer {
+    margin-top: 40px;
+    padding: 5px;
+    border-top: 1px solid #eaeaea;
+    color: #777;
+}
+
+footer.hover {
+    color: #222;
+
+}
+
+footer small {
+    float: left;
+}
+
+footer ul {
+    float: right;
+    list-style: none;
+}
