--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,17 +24,18 @@ $navbar-default-bg: #0077b3;
 .jumbotron {
     background-image: asset-url("sky.jpg");
     background-size: cover;
-    height: 50vh;
+    min-width: 100%;
+    height: 60vh;
 }
 
 .jumbotron h1 {
     color: white;
     font-size: 5em;
     text-align: center;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
     letter-spacing: -1px;
     font-weight: bold;
-    padding-top: 44px;
+    padding-top: 35px;
 }
 
 .btn-xlrg {
