--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
 <div class="center jumbotron">
-  <h1>ALPHA BLOG</h1>
-  <%= link_to "Sign Up Now", "#", class:"btn btn-primary btn-xlrg" %>
+  <div class="container">
+    <h1>ALPHA BLOG</h1>
+    <%= link_to "Sign Up Now", "#", class:"btn btn-primary btn-xlrg" %>
+  </div>
 </div>
