add styling to show template

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,6 +51,14 @@ $navbar-default-bg: #0077b3;
     color: white;
 }
 
+.article-actions {
+    border-top: 1px solid #eaeaea;
+    padding-top: 10px;
+}
+
+.description {
+    margin-top: 0;
+}
 footer {
     margin-top: 40px;
     padding: 5px;
