--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,6 +59,17 @@ $navbar-default-bg: #0077b3;
 .description {
     margin-top: 0;
 }
+
+.article-title {
+    font-weight:bold;
+    font-size: 1.5em;
+}
+
+.article-body {
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
 footer {
     margin-top: 40px;
     padding: 5px;
