--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,6 +51,10 @@ $navbar-default-bg: #0077b3;
     color: white;
 }
 
+.meta-details {
+    border-top: 1px solid #eaeaea;
+    margin-top: 15px;
+}
 .article-actions {
     border-top: 1px solid #eaeaea;
     padding-top: 10px;
