--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,10 @@
 <h1 align="center">Listing all articles</h1>
 
 <h3 align="center"><%= link_to "Create New Article", new_article_path %></h3>
-
+<div align="center">
+  <%= will_paginate %>
+</div>
 <%= render 'article', obj: @articles %>
-  
+ <div align="center">
+  <%= will_paginate %>
+</div> 
