--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <h1 align="center">All Alpha Bloggers</h1>
 <% @users.each do |user| %>
  <div align="center"> 
+ <%= will_paginate %>
   <ul class="listing">
     <div class="row">
       <div class="well col-md-4 col-md-offset-4">
@@ -12,4 +13,5 @@
     </div>
   </ul>
 <% end %>
+<%= will_paginate %>
 </div>
